# bili2text

./: .gitignore  CHANGELOG.en.md  CHANGELOG.md  README.en.md  README.md  exAudio.py  main.py  pyproject.toml  window.py
archive/: README.md  exAudio.py
docs/: API.md  DEVELOPMENT.en.md  DEVELOPMENT.md
docs/superpowers/plans/: 2026-04-10-bootstrap-uv-environment.md  2026-04-11-progress-tasks-library.md
docs/superpowers/specs/: 2026-04-10-bootstrap-uv-design.md  2026-04-11-progress-tasks-library-design.md
src/b2t/: __init__.py  __main__.py  bootstrap.py  cli.py  cli_progress.py  config.py  database.py  factory.py  i18n.py  inputs.py  library.py  models.py  pipeline.py  progress.py  tasks.py  user_config.py  web.py  window_app.py
src/b2t/downloaders/: __init__.py  base.py  ytdlp.py
src/b2t/templates/: index.html  result.html  task.html  video.html
src/b2t/transcribers/: __init__.py  base.py  sensevoice_local.py  volcengine.py  whisper_local.py
tests/: test_bootstrap_env.py  test_cli.py  test_database.py  test_i18n.py  test_inputs.py  test_pipeline.py  test_progress.py  test_tasks.py  test_user_config.py  test_volcengine.py  test_web.py  test_whisper_local.py  test_ytdlp_downloader.py
